--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -489,10 +489,11 @@ section.innovation {
       }
 
       div.middle {
-        width: 90%;
-        background-image: url('../assets/img/circle.svg');
+        width: 45%;
+        background-image: url('../assets/img/test_ellipse.gif');
         background-position: center;
         background-repeat: no-repeat;
+        background-size: cover;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -2522,6 +2523,11 @@ footer {
   section.innovation {
     div.container {
       padding: 30% 0%;
+      div.content{
+        div.middle{
+          width: 65%;
+        }
+      }
     }
   }
 
